--- a/charts/templates/serviceaccount1.yaml
+++ b/charts/templates/serviceaccount1.yaml
@@ -1,5 +1,11 @@
 apiVersion: v1
-kind: ServiceAccount
+kind: Secret
 metadata:
-  name: test-admin-account
-  namespace: {{ .Values.namespace }}
+  name: secrettest1234
+  namespace: {{ Values.namespace }}
+type: Opaque
+stringData:
+  secret.json: |-
+    {
+      "api_key" : "somesecretgoeshere"
+    }
