--- a/charts/templates/serviceaccount1.yaml
+++ b/charts/templates/serviceaccount1.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secrettest1234
-  namespace: {{ Values.namespace }}
+  namespace: testspace
 type: Opaque
 stringData:
   secret.json: |-
