--- a/charts/chart1/templates/testsecret.yaml
+++ b/charts/chart1/templates/testsecret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secrettest1234
-  namespace: testspace
+  name: secrettest5555
+  namespace: {{ .Values.namespace }}
 type: Opaque
 stringData:
   secret.json: |-
