--- a/helmreleastest.yaml
+++ b/helmreleastest.yaml
@@ -2,9 +2,9 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: testservice
-  namespace: default
+  namespace: testspace
 spec:
   chart:
     repository: git@github.com:OliverK99/helmtest
     ref: master
-    path: charts
+    path: charts/chart1
