--- a/charts/chart1/Chart.yaml
+++ b/charts/chart1/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
-name: testchart
-version: 0.1.0
-description: Some description
+version: 3.1.5
+appVersion: 3.1.5
+name: testaccount
+description: Serviceaccounts for Kubernetes
