--- a/helmreleastest.yaml
+++ b/helmreleastest.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: testservice
-  namespace: testspace
+  name: testrelease
+  namespace: default
 spec:
   chart:
     repository: git@github.com:OliverK99/helmtest
