--- a/charts/chart1/Chart.yaml
+++ b/charts/chart1/Chart.yaml
@@ -1,5 +1,10 @@
 apiVersion: v1
-version: 3.1.5
-appVersion: 3.1.5
-name: testaccount
-description: Serviceaccounts for Kubernetes
+name: service-accounts-release
+version: 1.0.0
+appVersion: 1.0.0
+description: The service accounts
+sources:
+  - https://github.com/OliverK99/helmtest.git
+maintainers:
+  - name: oli
+engine: gotpl
