--- a/charts/chart1/templates/testsecret.yaml
+++ b/charts/chart1/templates/testsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secrettest5555
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.helmServiceAccount.namespace }}
 type: Opaque
 stringData:
   secret.json: |-
