--- a/charts/chart1/templates/testsecret2.yaml
+++ b/charts/chart1/templates/testsecret2.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secrettest121212
+  namespace: {{ .Values.helmServiceAccount.namespace }}
 type: Opaque
 stringData:
   secret.json: |-
