--- a/cronjobs/scaleup.yaml
+++ b/cronjobs/scaleup.yaml
@@ -4,7 +4,7 @@ metadata:
   name: scaleupjob
   namespace: testspace
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "0 * * * *"
   jobTemplate:
     spec:
       template:
@@ -14,5 +14,5 @@ spec:
             image: scaleupimg
             imagePullPolicy: IfNotPresent
             args:
-              - "kubectl patch hpa testspace-podinfo-test --patch '{\"spec\":{\"minReplicas\":5}}'"
+              - "kubectl patch hpa testspace-podinfo-test --namespace=testspace --patch '{\"spec\":{\"minReplicas\":5}}'"
           restartPolicy: OnFailure
