--- a/cronjobs/scaleup.yaml
+++ b/cronjobs/scaleup.yaml
@@ -11,6 +11,8 @@ spec:
         spec:
           containers:
           - name: scaleupjob
+            image: busybox
+            imagePullPolicy: IfNotPresent
             args:
               - "kubectl patch hpa testspace-podinfo-test --namespace=testspace --patch '{\"spec\":{\"minReplicas\":5}}'"
           restartPolicy: OnFailure
