--- a/cronjobs/scaleup.yaml
+++ b/cronjobs/scaleup.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       template:
         spec:
-          serviceAccountName: admin-user
+          serviceAccountName: scale-user
           containers:
           - name: scaleupjob
             image: bitnami/kubectl:latest
