--- a/charts/chart1/templates/testsecret.yaml
+++ b/charts/chart1/templates/testsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secrettest5555
+  name: {{ .Values.helmServiceAccount.name }}
   namespace: {{ .Values.helmServiceAccount.namespace }}
 type: Opaque
 stringData:
