--- a/cronjobs/scaledown-withouthpa.yaml
+++ b/cronjobs/scaledown-withouthpa.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       template:
         spec:
-          serviceAccountName: admin-user
+          serviceAccountName: scalewo-user
           containers:
           - name: scaledownjob-withouthpa
             image: bitnami/kubectl:latest
