--- a/cronjobs/scaleup-withouthpa.yaml
+++ b/cronjobs/scaleup-withouthpa.yaml
@@ -15,5 +15,5 @@ spec:
             command:
               - /bin/sh
               - -c
-              - kubectl scale --replicas=3 deployment default-podinfo --namespace=default 
+              - kubectl scale --replicas=3 deployment default-podinfo-test --namespace=default 
           restartPolicy: OnFailure
