--- a/standardaccounts/scalerolebinding.yaml
+++ b/standardaccounts/scalerolebinding.yaml
@@ -4,9 +4,9 @@ metadata:
   name: scale-rolebinding
   namespace: testspace
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  kind: Role
+  name: scale-role
+  namespace: testspace
 subjects:
 - kind: ServiceAccount
   name: scale-user
