--- a/charts/chart2/templates/serviceaccount.yaml
+++ b/charts/chart2/templates/serviceaccount.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.helmServiceAccount.name }}
-  namespace: {{ .Release.namespace }}
+  namespace: {{ .Values.namespace }}
