--- a/chart2/templates/testsecret.yaml
+++ b/chart2/templates/testsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.helmServiceAccount.name }}
+  name: test-{{ .Values.helmServiceAccount.name }}
 type: Opaque
 stringData:
   secret.json: |-
