--- a/charts/chart2/templates/servicerolebinding.yaml
+++ b/charts/chart2/templates/servicerolebinding.yaml
@@ -2,7 +2,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ .Values.helmServiceRole.name }}
-  namespace: {{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -10,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.helmServiceAccount.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
