--- a/charts/chart2/templates/servicerolebinding.yaml
+++ b/charts/chart2/templates/servicerolebinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.helmServiceAccount.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.namespace }}
