--- a/charts/chart1/templates/testsecret.yaml
+++ b/charts/chart1/templates/testsecret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.helmServiceAccount.name }}
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
   secret.json: |-
