--- a/flux/helmreleases/helmreleastest.yaml
+++ b/flux/helmreleases/helmreleastest.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: serviceacc
-  namespace: testspace2
+  namespace: testspace
 spec:
   chart:
     git: https://github.com/OliverK99/helmtest.git
