--- a/charts/chart1/templates/testsecret.yaml
+++ b/charts/chart1/templates/testsecret.yaml
@@ -7,5 +7,5 @@ type: Opaque
 stringData:
   secret.json: |-
     {
-      "api_key" : "somesecretgoeshere"
+      "api_key" : "somesecretgoeshere1"
     }
